# vox-drop

./: .gitignore  CLAUDE.md  README.md  process_drop.py  pyproject.toml  transcribe.py  transcribe_all.sh  vault_drop.py
tests/: test_process_drop.py  test_transcribe.py
