[project]
name = "vox-drop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.scripts]
vox-drop = "transcribe:main"
vox-drop-inbox = "vault_drop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["transcribe.py", "vault_drop.py"]
