[project]
name = "vox-drop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.scripts]
vox-drop = "transcribe:main"
vox-drop-inbox = "drop_to_vault:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["transcribe.py", "drop_to_vault.py"]
