[project]
name = "vox-drop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
]

[project.scripts]
transcribe = "transcribe:main"
vox-to-vault = "process_drop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["transcribe.py", "process_drop.py"]
